[package]
name = "usiem-basic-parser"
version = "0.0.5"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "uSIEM parser component that allows using multiple and different parsers"
repository = "https://github.com/u-siem/usiem-basic-parser"
keywords = ["SIEM", "security", "logs","parser"]
categories = ["parsing"]
edition = "2018"

[lib]
name = "usiem_basic_parser"
path = "src/lib.rs"

[dependencies]
u-siem = "0.0"

[dev-dependencies]
lazy_static = "1.4.0"